--- a/src/tobetoPlatformm/WebAPI/appsettings.json
+++ b/src/tobetoPlatformm/WebAPI/appsettings.json
@@ -7,9 +7,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
+ 
   "ConnectionStrings": {
-    "BaseDb": "Server=HOST_ADDRESS; Database=DATABASE_NAME; User Id=USER; Password=PASSWORD; TrustServerCertificate=True;"
+    "TobetoPlatformDb": "Data Source=(localdb)\\MSSQLLocalDB;Database=TobetoPlatformDb;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
 
   "CacheSettings": {
